--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": 
-"  مهاده",
+"  Rayan1",
   "description": "Minimal example for recording any screen/window in manifest V3, allowing redirection on current tab",
   "version": "1.0",
   "manifest_version": 3,
